--- a/REACT_1.0/src/componentes/CardRecomenda/estilo.css
+++ b/REACT_1.0/src/componentes/CardRecomenda/estilo.css
@@ -1,12 +1,22 @@
 .cardRecomenda{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 16px;
     height: 250px;
+    width: 500px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-    /* box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5); */
+    box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     margin: 16px;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+}
+
+.image{
+    display: flex;
+    flex-direction: column;
 }
